--- a/constructs/package.json
+++ b/constructs/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "static-site",
+  "name": "@thunderso/stacks",
   "version": "0.0.1",
-  "description": "CDK Library for provisioning infrastructure for Single Page Applications.",
+  "description": "CDK Constructs to initiate an App on CDK and AppConfig",
   "type": "module",
   "main": "index.ts",
   "repository": {
@@ -16,21 +16,23 @@
   },
   "license": "Apache-2.0",
   "scripts": {
+    "build": "tsc -b .",
     "test": "jest --coverage",
-    "cdk": "cdk"
+    "clean": "tsc -b --clean",
+    "watch": "tsc -b -w"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "20.14.8",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.5",
-    "aws-cdk": "2.147.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.5.2"
   },
   "dependencies": {
     "aws-cdk-lib": "2.147.0",
     "constructs": "^10.3.0",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "yaml": "^2.4.5"
   }
 }
