--- a/static-site/tsconfig.json
+++ b/static-site/tsconfig.json
@@ -1,11 +1,13 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ESNext",
     "module": "ESNext",
+    "moduleResolution": "Node10",
     "lib": [
       "es2020",
       "dom"
     ],
+    "types": ["node"],
     "declaration": true,
     "strict": true,
     "noImplicitAny": true,
