--- a/.configs/tsconfig.json
+++ b/.configs/tsconfig.json
@@ -1,11 +1,15 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
+    "target": "ESNext",
+    "module": "ES2020",
+    "moduleResolution": "Bundler",
     "lib": [
-      "es2020",
-      "dom"
+      "ES2020",
+      "dom",
+      "dom.iterable"
     ],
+    "jsx": "preserve",
+    "types": ["node"],
     "declaration": true,
     "strict": true,
     "noImplicitAny": true,
