--- a/constructs/package.json
+++ b/constructs/package.json
@@ -7,7 +7,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/thunder-so/stacks.git",
-    "directory": "constructs/application"
+    "directory": "constructs/"
   },
   "author": {
     "name": "CloudBits, Inc.",
@@ -20,19 +20,5 @@
     "test": "jest --coverage",
     "clean": "tsc -b --clean",
     "watch": "tsc -b -w"
-  },
-  "devDependencies": {
-    "@types/jest": "^29.5.12",
-    "@types/node": "20.14.8",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.5",
-    "ts-node": "^10.9.2",
-    "typescript": "~5.5.2"
-  },
-  "dependencies": {
-    "aws-cdk-lib": "2.147.0",
-    "constructs": "^10.3.0",
-    "source-map-support": "^0.5.21",
-    "yaml": "^2.4.5"
   }
 }
