--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,9 +23,9 @@ jobs:
         run: |
           npm ci
           
-      - name: Build project
-        run: |
-          npm run build
+      # - name: Build project
+      #   run: |
+      #     npm run build
 
       - name: Publish
         run: npm publish --access public
