--- a/constructs/tsconfig.json
+++ b/constructs/tsconfig.json
@@ -1,34 +1,3 @@
 {
-  "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleResolution": "Node10",
-    "lib": [
-      "es2020",
-      "dom"
-    ],
-    "types": ["node"],
-    "esModuleInterop": true,
-    "declaration": true,
-    "strict": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "noImplicitThis": true,
-    "alwaysStrict": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": false,
-    "inlineSourceMap": false,
-    "inlineSources": false,
-    "experimentalDecorators": false,
-    "strictPropertyInitialization": false,
-    "typeRoots": [
-      "node_modules/@types"
-    ]
-  },
-  "exclude": [
-    "node_modules",
-    "cdk.out"
-  ]
+  "extends": "../.configs/tsconfig.json",
 }
