--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     "allowSyntheticDefaultImports": true,
     "typeRoots": [
       "./node_modules/@types",
-      ".././node_modules/@types",
+      "../node_modules/@types",
     ],
     "types": ["node"]
   },
