--- a/constructs/package.json
+++ b/constructs/package.json
@@ -22,6 +22,9 @@
     "watch": "tsc -b -w"
   },
   "dependencies": {
-    "@aws-solutions-constructs/core": "^2.64.0"
+    "@aws-solutions-constructs/core": "^2.64.0",
+    "@aws-sdk/client-codepipeline": "^3.629.0",
+    "@aws-sdk/client-s3": "^3.629.0",
+    "@aws-sdk/core": "^3.629.0"
   }
 }
