--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "ts-jest": "^29.1.5",
         "ts-node": "^10.9.2",
         "tsx": "^4.15.7",
-        "typescript": "~5.5.2"
+        "typescript": "~5.5.2",
+        "vitepress": "^1.3.2"
     },
     "dependencies": {
         "aws-cdk-lib": "2.147.0",
