--- a/examples/astro/package.json
+++ b/examples/astro/package.json
@@ -10,11 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.2",
     "@astrojs/mdx": "^3.1.3",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
     "astro": "^4.13.3",
-    "@astrojs/check": "^0.9.2",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "aws-cdk-lib": "^2.151.0",
+    "tsx": "^4.17.0"
   }
 }
