--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+*.js
+!jest.config.js
+*.d.ts
+node_modules
+
+# CDK asset staging directory
+.cdk.staging
+cdk.out
+
 # Logs
 logs
 *.log
@@ -130,9 +139,3 @@ dist
 
 # vscode
 .vscode
-
-# examples
-.example
-
-# AWS CDK
-cdk.out
