--- a/package.json
+++ b/package.json
@@ -1,26 +1,38 @@
 {
-    "name": "@thunderso/stacks",
-    "version": "0.5.0",
-    "workspaces": [
-        "constructs",
-        "static-site"
-    ],
-    "scripts": {},
-    "devDependencies": {
-        "@types/jest": "^29.5.12",
-        "@types/node": "20.14.8",
-        "aws-cdk": "2.147.0",
-        "jest": "^29.7.0",
-        "ts-jest": "^29.1.5",
-        "ts-node": "^10.9.2",
-        "tsx": "^4.15.7",
-        "typescript": "~5.5.2",
-        "vitepress": "^1.3.2"
-    },
-    "dependencies": {
-        "aws-cdk-lib": "2.147.0",
-        "constructs": "^10.3.0",
-        "source-map-support": "^0.5.21",
-        "yaml": "^2.4.5"
-    }
+  "name": "@thunderso/cdk-spa",
+  "version": "0.5.0",
+  "description": "CDK Library for provisioning infrastructure for Single Page Applications.",
+  "type": "module",
+  "main": "index.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/thunder-so/cdk-spa.git"
+  },
+  "author": {
+    "name": "CloudBits, Inc.",
+    "url": "https://www.thunder.so",
+    "organization": true
+  },
+  "license": "Apache-2.0",
+  "scripts": {
+    "cdk": "cdk",
+    "build": "tsc -b .",
+    "clean": "tsc -b --clean",
+    "watch": "tsc -b -w"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/node": "22.4.0",
+    "aws-cdk": "2.150.0",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.17.0",
+    "typescript": "~5.5.4"
+  },
+  "dependencies": {
+    "aws-cdk-lib": "2.150.0",
+    "constructs": "^10.3.0",
+    "source-map-support": "^0.5.21",
+    "yaml": "^2.5.0",
+    "@aws-solutions-constructs/core": "^2.65.0"
+  }
 }
