--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "@thunderso/cdk-spa",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "CDK Library for provisioning infrastructure for Single Page Applications.",
-  "tags": ["aws", "cdk", "spa", "typescript"],
+  "tags": [
+    "aws",
+    "cdk",
+    "spa",
+    "typescript"
+  ],
   "type": "module",
   "main": "index.ts",
   "repository": {
